[metadata]
name = pyPolarionCli
version = attr: pyPolarionCli.version.__version__
description = pyPolarionCli is a command-line tool designed for easy access to Polarion work items, e.g. for metric creation.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/NewTec-GmbH/pyPolarionCli
author = Gabryel Reyes
author_email = gabryel.reyes@newtec.de
license = BSD 3-Clause
license_files = LICENSE
classifiers =
    License :: OSI Approved :: BSD 3-Clause
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
project_urls = 
    Documentation = https://github.com/NewTec-GmbH/pyPolarionCli
    Source = https://github.com/NewTec-GmbH/pyPolarionCli
    Tracker = https://github.com/NewTec-GmbH/pyPolarionCli/issues

[options]
package_dir=
    =src
packages = find:
zip_safe = False
platforms = any
include_package_data = True
install_requires =
    polarion>=1.4.0
    toml>=0.10.2
python_requires = >=3.9
setup_requires =
    setuptools_scm
    wheel
    toml

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    pyPolarionCli = pyPolarionCli.__main__:main
